src/components/fb2/CreateFidelityBond.module.css
.container {
  border: 1px solid var(--bs-gray-200);
  border-radius: 0.3rem;
  padding: 1.25rem;
}

:root[data-theme='dark'] .container {
  border-color: var(--bs-gray-700);
}

.header {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  cursor: pointer;
}

.header .subtitleJar {
  flex-shrink: 0;
}

.header .subtitle {
  flex-shrink: 1;
  font-size: 0.9rem;
  color: var(--bs-gray-600);
}

.formMessageWhenBondAlreadyExists {
  flex-shrink: 1;
  font-size: 0.8rem;
  color: var(--bs-gray-600);
}

.formMessageWhenBondAlreadyExists a {
  color: inherit;
}

.header .title {
  width: 100%;
  font-size: 1.2rem;
  color: var(--bs-body-color);
}

.header svg {
  color: var(--bs-body-color);
}

.header :global .accordion-button:after {
  display: none;
}

.successCheckmark {
  width: '2rem';
  height: '2rem';
  background-color: 'rgba(39, 174, 96, 1)';
  color: 'white';
  border-radius: '50%';
}

.tabs {
  display: flex;
  width: 100%;
  flex-direction: column;
}
.tab {
  cursor: pointer;
  padding: 10px 20px;
  color: var(--bs-white);
  background-color: var(--bs-gray-800);
  margin-bottom: 5px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

:root[data-theme='dark'] .tab {
  color: var(--bs-body-color);
  border-color: var(--bs-gray-700);
}

.circle {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0.8rem 0.8rem;
  border-radius: 100%;
  background-color: var(--bs-gray-100);
}

.step {
  position: absolute;
  color: var(--bs-gray-900);
}

.addressLabel {
  color: var(--bs-gray-600);
  font-size: 1rem;
}

.addressContent {
  font-size: 1rem;
  word-break: break-all;
}

.timelockedAddress {
  text-align: left;
  padding: 0;
  font-size: 0.8rem;
}

.subTitle {
  font-size: 0.8rem;
}

